# nerdlandbot

./: .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  common_functions.py  constants.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: docker_registry_develop.yml  docker_registry_master.yml
Bot/: nerdlandbot.py
Commands/: GuildData.py  escaperooms.py  games.py  help.py  kerk.py  membercount.py  notify.py  poll.py  purger.py  random_user.py  serverData.py  settings.py  wombat.py  youtube.py
EscaperoomsCSV/: tracking_table.csv
EventHandlers/: oncommanderror.py  onmemberjoin.py  onready.py
GuildConfigs/: 707510869776662529.json  712743925114339328.json  example.json
Helpers/: TranslationHelper.py  common_functions.py  constants.py  emoji.py  log.py  parser.py
Persistence/: abstractconfigstore.py
Persistence/test/: test_jsonconfigstore.py
Scheduler/: PurgeScheduler.py  Scheduler.py  YoutubeScheduler.py
Translations/: Translations.csv  Translations.py
nerdlandbot/: __main__.py
nerdlandbot/bot/: __init__.py  nerdlandbot.py
nerdlandbot/commands/: Calendar.py  GuildData.py  calendar.py  church.py  dadJoke.py  dad_joke.py  eight_ball.py  help.py  kerk.py  membercount.py  minecraft.py  moderator.py  notify.py  open_source.py  pets.py  poll.py  privacy.py  purger.py  random.py  random_user.py  recipe.py  reminder.py  settings.py  space_launches.py  wombat.py  youtube.py
nerdlandbot/eventhandlers/: oncommanderror.py  onmemberjoin.py  onready.py
nerdlandbot/helpers/: TranslationHelper.py  channel.py  constants.py  emoji.py  log.py  parser.py
nerdlandbot/persistence/: configuration.py
space_commands/: Readme.txt  space_launches.json  space_launches.time
src/: main.py
tests/: conftest.py  test_nerdlandbot.py
(+27 files in other folders)
