[tool.poetry]
name = "nerdlandbot"
version = "0.1.0"
description = ""
authors = ["Autom"]

[tool.poetry.dependencies]
python = "^3.8"
discord-py = "^1.5.1"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
