[tool.poetry]
name = "nerdlandbot"
version = "0.1.0"
description = ""
authors = ["Arno989", "Autom", "Bob van der Vleuten", "Eva Smeets", "flor01", "Sebastiaan Jansen", "Senne De Vocht", "Thunderb1rdOne", "TsjipTsjip", "Wouter Hermans", "Wouter Meuwis"]

[tool.poetry.dependencies]
python = "^3.8"
discord-py = "^1.7.0"
python-dotenv = "^0.14.0"
requests = "^2.31.0"
tweepy = "^3.10.0"
beautifulsoup4 = "^4.9.3"
gspread = "^3.7.0"
pytest = "^5.4.3"
pytest-asyncio = "^0.15.1"
pillow = "^8.2.0"
aiohttp = "^3.7.4"
mcstatus = "^6.4.0"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
